Creative Builders Africa ltd
Minor Content update and small tweak changes

--- a/index.html
+++ b/index.html
@@ -96,26 +96,6 @@
             <!--Card 1-->
             <div class="project_card">
                 <div class="card_image">
-                    <img src="./images/card1.webp" alt="Project One tile">
-                </div>
-                <div class="card_content">
-                    <div class="card_meta">
-                        <span class="card_category">Residential</span>
-                        <span class="card_year">2023</span>
-                    </div>
-                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
-                    <p class="card_category">Scope - Design and Project Management</p>
-                    <p class="card_description">
-                        <details>
-                            <summary>About Project</summary>
-                            5-Bedroom modern home with open 
-                            spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>
-                        </details>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="project_card">
-                <div class="card_image">
                     <img src="./images/card2.webp" alt="Project 2 tile">
                 </div>
                 <div class="card_content">
@@ -123,9 +103,24 @@
                         <span class="card_category">Residential</span>
                         <span class="card_year">2024</span>
                     </div>
-                    <h3 class="card_title">4 Bedroom House, Ngong' Kajiado - Kenya</h3>
-                    <p class="card_category">Scope - Design and Construction</p>
-                    <p class="card_description">Contemporary 4-bedroom home with open-plan spaces, natural light, and premium finishes. Managed full design, approvals, supervision, and coordination to deliver on time and budget from  concept to Completion. Highlights include modern style, quality materials, and energy-efficient design.</p>
+                    <h3 class="card_title">Ngong' Kajiado - Kenya</h3>
+                    <p class="card_category">Scope | Design and Construction</p>
+                    <!--<p class="card_description">Contemporary 4-bedroom home with open-plan spaces, natural light, and premium finishes. Managed full design, approvals, supervision, and coordination to deliver on time and budget from  concept to Completion. Highlights include modern style, quality materials, and energy-efficient design.--></p>
+                </div>
+            </div>
+            <!--Card 2-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/hero Images/bannerimage1.webp" alt="Project 5 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">2024</span>
+                    </div>
+                    <h3 class="card_title">Some Estate</h3>
+                    <p class="card_category">Scope | </p>
+                <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
             </div>
             <!--Card 3-->
@@ -139,11 +134,43 @@
                         <span class="card_year">Ongoing</span>
                     </div>
                     <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
-                    <p class="card_category">Scope - Design and Construction</p>
-                    <p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>
+                    <p class="card_category">Scope | Design and Construction</p>
+                <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
                 </div>
             </div>
             <!--Card 4-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/card1.webp" alt="Project One tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">2023</span>
+                    </div>
+                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
+                    <p class="card_category">Scope | Design and Project Management</p>
+                <!--<p class="card_description">
+                    5-Bedroom modern home with open 
+                    spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>-->
+                </div>
+            </div>
+            <!--Card 5-->
+            <div class="project_card">
+                <div class="card_image">
+                    <img src="./images/Card5.webp" alt="Project 3 tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential Estate</span>
+                        <span class="card_year">Ongoing</span>
+                    </div>
+                    <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
+                    <p class="card_category">Scope | Design and Construction</p>
+                <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
+                </div>
+            </div>
+            <!--Card 6-->
             <div class="project_card">
                 <div class="card_image">
                     <img src="./images/card4.webp" alt="Project 4 tile">
@@ -154,25 +181,11 @@
                         <span class="card_year">2025</span>
                     </div>
                     <h3 class="card_title">Koko Business Center</h3>
-                    <p class="card_category">Scope - Brand Responsive Interior Design</p>
-                    <p class="card_description">Design that translates a company’s values, colors, and culture into physical space. Layout, lighting, furniture, finishes, and graphics work together to tell the brand story. Features include brand colors and materials, culture-driven layouts, custom furniture, mood-aligned lighting, and sustainable, innovative solutions.</p>
+                    <p class="card_category">Scope | Brand Responsive Interior Design</p>
+                <!--p class="card_description">Design that translates a company’s values, colors, and culture into physical space. Layout, lighting, furniture, finishes, and graphics work together to tell the brand story. Features include brand colors and materials, culture-driven layouts, custom furniture, mood-aligned lighting, and sustainable, innovative solutions.</p>-->
                 </div>
             </div>
-            <!--Card 5-->
-            <div class="project_card">
-                <div class="card_image">
-                    <img src="./images/hero Images/bannerimage1.webp" alt="Project 5 tile">
-                </div>
-                <div class="card_content">
-                    <div class="card_meta">
-                        <span class="card_category">Residential</span>
-                        <span class="card_year">2024</span>
-                    </div>
-                    <h3 class="card_title">Some Estate</h3>
-                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
-                </div>
-            </div>
-            <!--Card 6-->
+            <!--Card 7-->
             <div class="project_card">
                 <div class="card_image">
                     <img src="./images/hero Images/bannerimage3.webp" alt="Project 6 tile">
@@ -183,10 +196,11 @@
                         <span class="card_year">Ongoing</span>
                     </div>
                     <h3 class="card_title">Some Estate</h3>
-                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                    <p class="card_category">scope | </p>
+                <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
             </div>
-            <!--Card 7-->
+            <!--Card 8-->
             <div class="project_card">
                 <div class="card_image">
                     <img src="./images/card7.webp" alt="Project 3 tile">
@@ -197,7 +211,8 @@
                         <span class="card_year">2025</span>
                     </div>
                     <h3 class="card_title">Santa Monica</h3>
-                    <p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>
+                    <p class="card_category">scope | </p>
+                <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
             </div>
         </div>
@@ -319,7 +334,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy;Copyright Creative Builders Africa Ltd 2025.All Rights Reserved.</p><br>
+            <p>&copy;Copyright Creative Builders Africa Ltd 2025.All Rights Reserved.</p>
             <p>Designed and Built by <span><a href="https://wa.me/254795669740" style="color: #929dab;">Leakey Hans Creative</a></span></p>
         </div>
     </footer>
