Creative Builders Africa Ltd
Content update, Projects card redesignend

--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                         <span class="card_year">2024</span>
                     </div>
                     <h3 class="card_title">Ngong' Kajiado - Kenya</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | Design and Construction</p>
                     <!--<p class="card_description">Contemporary 4-bedroom home with open-plan spaces, natural light, and premium finishes. Managed full design, approvals, supervision, and coordination to deliver on time and budget from  concept to Completion. Highlights include modern style, quality materials, and energy-efficient design.--></p>
                 </div>
