--- a/index.html
+++ b/index.html
@@ -136,6 +136,23 @@
                         <span class="card_year">2024</span>
                     </div>
                     <h3 class="card_title">Some Estate</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | </p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
@@ -151,6 +168,23 @@
                         <span class="card_year">Ongoing</span>
                     </div>
                     <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | Design and Construction</p>
                 <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
                 </div>
@@ -166,6 +200,23 @@
                         <span class="card_year">2023</span>
                     </div>
                     <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | Design and Project Management</p>
                 <!--<p class="card_description">
                     5-Bedroom modern home with open 
@@ -183,6 +234,23 @@
                         <span class="card_year">Ongoing</span>
                     </div>
                     <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | Design and Construction</p>
                 <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
                 </div>
@@ -198,6 +266,23 @@
                         <span class="card_year">2025</span>
                     </div>
                     <h3 class="card_title">Koko Business Center</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">Scope | Brand Responsive Interior Design</p>
                 <!--p class="card_description">Design that translates a company’s values, colors, and culture into physical space. Layout, lighting, furniture, finishes, and graphics work together to tell the brand story. Features include brand colors and materials, culture-driven layouts, custom furniture, mood-aligned lighting, and sustainable, innovative solutions.</p>-->
                 </div>
@@ -213,6 +298,23 @@
                         <span class="card_year">Ongoing</span>
                     </div>
                     <h3 class="card_title">Some Estate</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">scope | </p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
@@ -228,6 +330,23 @@
                         <span class="card_year">2025</span>
                     </div>
                     <h3 class="card_title">Santa Monica</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        </span>
+                    </div>
                     <p class="card_category">scope | </p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
