Creative Builders Africa ltd
Minor Ui fixes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Builders Africa</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 <body>
     <main>
@@ -435,7 +436,7 @@
                 <img src="./images/logos/Prime House Interior.webp" alt="Logo 4">
                 <img src="./images/logos/RAVI-HOMES-02.webp" alt="Logo 5">
                 <img src="./images/logos/safaricom.svg" alt="Logo 6">
-                <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7" style="height: 110px;">
+                <img src="./images/logos/TA_WEBSITE-LOGO-1.jpg" alt="Logo 7">
                 <img src="./images/logos/Unity-Homes-Header-Logo.webp" alt="Logo 8">
                 <img src="./images/logos/zuku-seeklogo.png" alt="logo 9">
                 <img src="./images/logos/D-Link.png" alt="Logo 1">
