Creative Builders Africa Ltd
UI improvements and responsiveness

--- a/index.html
+++ b/index.html
@@ -475,6 +475,14 @@
             <p>Designed and Built by <span><a href="https://wa.me/254795669740" style="color: #929dab;">Leakey Hans Creative</a></span></p>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 800,
+            offset: 100,
+            once: true
+        });
+    </script>
     <script>
 
         //Nav bar media query: Ham menu
