Creative Builders Africa Ltd
UI Imrovements: animated and rearranges services section

--- a/index.html
+++ b/index.html
@@ -359,69 +359,76 @@
     </section>
     <!--Services-->
     <section>
-        <div style="width: 100%; height: 100px; text-align: center; padding-top: 50px;">
-            <h3 style="font-weight: 400; font-size: 30px;">Our Services</h3>
+        <div style="width: 100%; height: 100px; text-align: center; padding-top: 50px; margin-bottom: 50px;">
+            <h3 style="font-weight: 400; font-size: 35px;">Our Services</h3>
         </div>
         <!--Tile 1-->
         <div class="services_section">
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Drawing.jpeg" alt="Drawing illustration">
+                    <img src="./svg-icons/Architecture.svg" alt="Architecture illustration">
                 </div>
-                <h3>Architectural Drawing and Design</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+                <h3>Architecture</h3><br>
+                <p>We design spaces that inspire - blending creativity, function,and sustainability to shape structures that reflect your vision and purpose.</p>
             </div>
             <!--Tile 2-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Construction.jpeg" alt="construction illustration">
+                    <img src="./svg-icons/Construction.svg" alt="construction illustration">
                 </div>
                 <h3>Construction</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius quasi reprehenderit assumenda esse aliquid vitae beatae possimus eligendi vel aspernatur?</p>
+                <p>We deliver quality construction with trusted expertise, ensuring durability, safety, and timely completion.</p>
             </div>
             <!--Tile 3-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Rendering.jpeg" alt="Rendering Icon">
+                    <img src="./svg-icons/Excavation.svg" alt="Excavation illustration">
                 </div>
-                <h3>Rendering Services</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+                <h3>Excavation</h3><br>
+                <p>We prepare your site with precision and care - from ground clearing to foundation work, ensuring a solid base for lasting construction.</p>
             </div>
             <!--Tile 4-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Interior Design.jpeg" alt="Interior Design Icon">
+                    <img src="./svg-icons/ProjectManagement.svg" alt="Excavation illustration">
                 </div>
-                <h3>Interior Design</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+                <h3>Project Management</h3><br>
+                <p>From concept to completion,we oversee very phase, ensuring efficiency, cost control, accountability, clear communication and successful project outcomes.</p>
             </div>
             <!--Tile 5-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Vr.jpeg" alt="Virtual Reality Icon">
+                    <img src="./svg-icons/Rendering.svg" alt="Rendering Icon">
                 </div>
-                <h3>Virtual Reality</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, ut eligendi? Eum, rem suscipit ab iste nesciunt nulla.</p>
+                <h3>Rendering</h3><br>
+                <p>See your ideas come to life. Our realistic 3D renders and fly through animations help you present, envision and market your designs with confidence</p>
             </div>
             <!--Tile 6-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Excavate.jpeg" alt="Excavation illustration">
+                    <img src="./svg-icons/Interior design.svg" alt="Interior Design Icon">
                 </div>
-                <h3>Excavation Services</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+                <h3>Interior Design</h3><br>
+                <p>We create inspiring interior spaces that reflect our clients personality while optimizing comfort, flow and modern design</p>
             </div>
             <!--Tile 7-->
             <div class="services_container">
                 <div class="service_icon">
-                    <img src="./images/serviceicons/Excavate.jpeg" alt="Excavation illustration">
+                    <img src="./svg-icons/VirtualReality.svg" alt="Virtual Reality Icon">
+                </div>
+                <h3>Virtual Reality</h3><br>
+                <p>Experience your projects before they're built with immersive 3D visualizations and interactive Virtual walkthroughs.</p>
+            </div>
+            <!--Tile 8-->
+            <div class="services_container">
+                <div class="service_icon">
+                    <img src="./svg-icons/Webdev.svg" alt="Excavation illustration">
                 </div>
                 <h3>Web Development</h3><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum autem odit perspiciatis ducimus repudiandae!</p>
+                <p>Bring your brand online with modern, responsive websites that showcase your projects beautifully and connect you with your audience.</p>
             </div>
         </div>
         <div class="btncontainer">
-            <button class="btn1"><a href="#">View All Services</a></button>
             <button class="btn2"><a href="#">Book a Consultation</a></button>
         </div>
     </section>
