Creative Builders Africa ltd
UI improvements, Fully responsive landing and about pages on smartphones

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,11 +15,11 @@
                     <img src="../images/logo.png" alt="creative builders logo" height="60" >
                     <!--Navlinks-->
                         <ul class="navlinks" id="Navlinks">
-                            <li><strong><a href="index.html">Home</a></strong></li>
-                            <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
+                            <li><strong><a href="../index.html">Home</a></strong></li>
+                            <li><a href="../pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Ask For a Fundi</a></li>
-                            <li id="nav_cta"><a href="https://forms.gle/TidR2JVRaxYHT66R8" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
+                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
+                            <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
                         <div class="hamburger" id="hamburger">
@@ -87,14 +87,6 @@
                 <div>
                     <span>6</span>
                     <p>Certifications</p>
-                </div>
-                <div>
-                    <span>15</span>
-                    <p>Counties</p>
-                </div>
-                <div>
-                    <span>17</span>
-                    <p>Year Experience</p>
                 </div>
             </div>
         </section>
