--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                     <img src="./images/logo.png" alt="creative builders logo" height="60" >
                     <!--Navlinks-->
                         <ul class="navlinks" id="Navlinks">
-                            <li><strong><a href="index.html">Home</a></strong></li>
+                            <li><strong><a href="index.html" rel="noopener noreferrer">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Ask For a Fundi</a></li>
-                            <li id="nav_cta"><a href="https://forms.gle/TidR2JVRaxYHT66R8" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
+                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header">Ask For a Fundi</a></li>
+                            <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
                         <div class="hamburger" id="hamburger">
