Creative Builders Africa ltd
Content Updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <li><strong><a href="index.html" rel="noopener noreferrer">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header">Ask For a Fundi</a></li>
+                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
                             <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
@@ -74,7 +74,7 @@
                 <p class="top">About Us</p>
                 <br>
                 <h1>From Blueprint to Reality</h1><br>
-                <p>Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
+                <p >Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
                 <br>
                 We are committed to transforming spaces through innovative, sustainable and cost-effective solutions tailored to our Clients' needs.
                 <br>
