--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
+    <script>//Make sure animate on scroll runs first
         AOS.init({
             duration: 800,
             offset: 100,
