Creative Builders Africa ltd
Html commenting

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         <span class="card_year">2024</span>
                     </div>
                     <h3 class="card_title">Ngong' Kajiado - Kenya</h3>
+                    <!--Project card meta properties svgs-->
                     <div class="card_icons">
                         <span class="item">
                             <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
