--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     </section>
     <section>
         <!--Fearured Projects Section-->
-        <div style="background-color: #f3f3f3; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+        <div style="background-color: #f3f3f3; border-top-left-radius: 10px; border-top-right-radius: 10px;" data-aos="fade-up"
+        data-aos-duration="2000">
             <h2 style="text-align: center; margin-top: 30px; padding-top: 20px;">Featured Projects</h2>
             <br>
             <p style="text-align: center;">Discover our portfolio of projects that showcase innovation, <br>sustainability, and timeless design principles.</p>
@@ -95,7 +96,8 @@
      <!--Project Tiles-->
         <div class="card_container">
             <!--Card 1-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/card2.webp" alt="Project 2 tile">
                 </div>
@@ -128,7 +130,8 @@
                 </div>
             </div>
             <!--Card 2-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/hero Images/bannerimage1.webp" alt="Project 5 tile">
                 </div>
@@ -160,7 +163,8 @@
                 </div>
             </div>
             <!--Card 3-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/Card5.webp" alt="Project 3 tile">
                 </div>
@@ -192,7 +196,8 @@
                 </div>
             </div>
             <!--Card 4-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/card1.webp" alt="Project One tile">
                 </div>
@@ -226,7 +231,8 @@
                 </div>
             </div>
             <!--Card 5-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/Card5.webp" alt="Project 3 tile">
                 </div>
@@ -258,7 +264,8 @@
                 </div>
             </div>
             <!--Card 6-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/card4.webp" alt="Project 4 tile">
                 </div>
@@ -290,7 +297,8 @@
                 </div>
             </div>
             <!--Card 7-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/hero Images/bannerimage3.webp" alt="Project 6 tile">
                 </div>
@@ -322,7 +330,8 @@
                 </div>
             </div>
             <!--Card 8-->
-            <div class="project_card">
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
                 <div class="card_image">
                     <img src="./images/card7.webp" alt="Project 3 tile">
                 </div>
