--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="cards">
         <!--Fearured Projects Section-->
         <div style="background-color: #f3f3f3; border-top-left-radius: 10px; border-top-right-radius: 10px;" data-aos="fade-up"
         data-aos-duration="2000">
@@ -110,19 +110,19 @@
                     <!--Project card meta properties svgs-->
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">300sqm
                         </span>
                         <span class="item">
                             <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">4
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">4
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">1
                         </span>
                     </div>
                     <p class="card_category">Scope | Design and Construction</p>
@@ -140,25 +140,22 @@
                         <span class="card_category">Residential</span>
                         <span class="card_year">2024</span>
                     </div>
-                    <h3 class="card_title">Some Estate</h3>
+                    <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">300sqm / Unit 
+                        </span>
+                        <span class="item" id="meta-item">
+                            6 Units
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">2
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">1
                         </span>
                     </div>
-                    <p class="card_category">Scope | </p>
+                    <p class="card_category">Scope | Design and construction</p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
             </div>
@@ -173,22 +170,19 @@
                         <span class="card_category">Residential Estate</span>
                         <span class="card_year">Ongoing</span>
                     </div>
-                    <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
+                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">350sqm / Unit
+                        </span>
+                        <span class="item" id="meta-item">
+                            4 Units
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">1
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">3
                         </span>
                     </div>
                     <p class="card_category">Scope | Design and Construction</p>
@@ -209,19 +203,19 @@
                     <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">500sqm
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">2
                         </span>
                         <span class="item">
                             <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">4
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">1
                         </span>
                     </div>
                     <p class="card_category">Scope | Design and Project Management</p>
@@ -231,38 +225,6 @@
                 </div>
             </div>
             <!--Card 5-->
-            <div class="project_card" data-aos="fade-up"
-            data-aos-duration="2000">
-                <div class="card_image">
-                    <img src="./images/Card5.webp" alt="Project 3 tile">
-                </div>
-                <div class="card_content">
-                    <div class="card_meta">
-                        <span class="card_category">Residential Estate</span>
-                        <span class="card_year">Ongoing</span>
-                    </div>
-                    <h3 class="card_title">Lavington, Nairobi - Kenya</h3>
-                    <div class="card_icons">
-                        <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
-                        </span>
-                    </div>
-                    <p class="card_category">Scope | Design and Construction</p>
-                <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
-                </div>
-            </div>
             <!--Card 6-->
             <div class="project_card" data-aos="fade-up"
             data-aos-duration="2000">
@@ -277,7 +239,7 @@
                     <h3 class="card_title">Koko Business Center</h3>
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">400sqm
                         </span>
                         <span class="item">
                             <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
@@ -297,38 +259,6 @@
                 </div>
             </div>
             <!--Card 7-->
-            <div class="project_card" data-aos="fade-up"
-            data-aos-duration="2000">
-                <div class="card_image">
-                    <img src="./images/hero Images/bannerimage3.webp" alt="Project 6 tile">
-                </div>
-                <div class="card_content">
-                    <div class="card_meta">
-                        <span class="card_category">Residential</span>
-                        <span class="card_year">Ongoing</span>
-                    </div>
-                    <h3 class="card_title">Some Estate</h3>
-                    <div class="card_icons">
-                        <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
-                        </span>
-                    </div>
-                    <p class="card_category">scope | </p>
-                <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
-                </div>
-            </div>
             <!--Card 8-->
             <div class="project_card" data-aos="fade-up"
             data-aos-duration="2000">
@@ -343,22 +273,16 @@
                     <h3 class="card_title">Santa Monica</h3>
                     <div class="card_icons">
                         <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">100sqm
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">250sqm
                         </span>
                         <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">3
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">1
                         </span>
-                        <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">6
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">2
+                        <span class="item" id="meta-item">
+                            interior Design
                         </span>
                     </div>
-                    <p class="card_category">scope | </p>
+                    <p class="card_category">scope | renovation and redesign</p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
                 </div>
             </div>
@@ -482,7 +406,7 @@
                 </div>
                 <div>
                     <p>Contact Us</p><br>
-                    <p>Phone: +2540702066062</p><br>
+                    <p>Phone: +254702066062 | +254729529106</p><br>
                     <p>Email: nicksonmunywoki@gmail.com</p>
                 </div>
             </div>
