Creative Builders Africa ltd
SEO optimization and favicon

--- a/index.html
+++ b/index.html
@@ -3,10 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Builders Africa</title>
+    <!-- Primary Meta Tags -->
+<title>Creative Builders Africa Ltd | Architecture, Construction, 3D Rendering & VR Solutions in Nairobi</title>
+<link rel="icon" type="image/png" href="./images/favicon/favicon.png">
+<meta name="description" content="Creative Builders Africa Ltd is a leading architectural and construction firm in Nairobi, Kenya. We provide architecture design, building construction, excavation, project management, interior design, 3D rendering, animation, virtual reality experiences, and web development services. Website created and designed by Leakey Hans.">
+
+<!-- Keywords -->
+<meta name="keywords" content="Creative Builders Africa Ltd, architecture firm Nairobi, architectural design Kenya, construction company Nairobi, excavation services Kenya, project management Nairobi, interior design Kenya, 3D rendering Nairobi, 3D animation architecture, virtual reality architecture Kenya, VR walkthroughs Kenya, web development Nairobi, Leakey Hans, architectural visualization Kenya, building contractors Nairobi">
+
+<!-- Author -->
+<meta name="author" content="Leakey Hans">
+
+<!-- Open Graph / Social Preview -->
+<meta property="og:title" content="Creative Builders Africa Ltd | Architecture, Construction & 3D Visualization in Nairobi">
+<meta property="og:description" content="Architectural design, construction, excavation, project management, interior design, 3D rendering, animation, VR experiences, and web development services in Nairobi, Kenya.">
+<meta property="og:type" content="website">
+<!--Domain name goes here-->
+<meta property="og:url" content="www.creativebuildersafricaltd.co.ke">
+<meta property="og:image" content="www.creativebuildersafricaltd.co.ke">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Creative Builders Africa Ltd | Architecture & 3D Rendering">
+<meta name="twitter:description" content="Premier architectural and construction solutions in Nairobi. VR, 3D rendering, interior design, project management, and more.">
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+
+<!-- Language -->
+<meta name="language" content="en">
+
+<!-- Geo Targeting -->
+<meta name="geo.region" content="KE-30">
+<meta name="geo.placename" content="Nairobi">
+<meta name="geo.position" content="-1.2921;36.8219">
+<meta name="ICBM" content="-1.2921, 36.8219">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="www.creativebuildersafricaltd.co.ke">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
+
 <body>
     <main>
         <header>
@@ -18,7 +57,7 @@
                         <ul class="navlinks" id="Navlinks">
                             <li><strong><a href="index.html" rel="noopener noreferrer">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="https://wa.me/254702066062" rel="noopener noreferrer" >Contact Us</a></li>
                             <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
                             <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
@@ -73,7 +112,7 @@
             <div class="about_content">
                 <p class="top">About Us</p>
                 <br>
-                <h1>From Blueprint to Reality</h1><br>
+                <h1>From Blueprint to <span id="underline">Reality</span></h1><br>
                 <p >Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
                 <br>
                 We are committed to transforming spaces through innovative, sustainable and cost-effective solutions tailored to our Clients' needs.
@@ -168,7 +207,7 @@
                 <div class="card_content">
                     <div class="card_meta">
                         <span class="card_category">Residential Estate</span>
-                        <span class="card_year">Ongoing</span>
+                        <span class="card_year">2023</span>
                     </div>
                     <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
                     <div class="card_icons">
@@ -187,41 +226,6 @@
                     </div>
                     <p class="card_category">Scope | Design and Construction</p>
                 <!--<p class="card_description">High-end residential estate in Lavington with multiple luxury units featuring modern design, open layouts, and premium finishes. Oversaw full project cycle from concept and approvals to supervision and quality control. Ensured timely, budget-conscious delivery with sustainable, energy-efficient solutions.</p>-->
-                </div>
-            </div>
-            <!--Card 4-->
-            <div class="project_card" data-aos="fade-up"
-            data-aos-duration="2000">
-                <div class="card_image">
-                    <img src="./images/card1.webp" alt="Project One tile">
-                </div>
-                <div class="card_content">
-                    <div class="card_meta">
-                        <span class="card_category">Residential</span>
-                        <span class="card_year">2023</span>
-                    </div>
-                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
-                    <div class="card_icons">
-                        <span class="item">
-                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">500sqm
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">2
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">4
-                        </span>
-                        <span class="item">
-                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">1
-                        </span>
-                    </div>
-                    <p class="card_category">Scope | Design and Project Management</p>
-                <!--<p class="card_description">
-                    5-Bedroom modern home with open 
-                    spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>-->
                 </div>
             </div>
             <!--Card 5-->
@@ -268,9 +272,9 @@
                 <div class="card_content">
                     <div class="card_meta">
                         <span class="card_category">Interior design</span>
-                        <span class="card_year">2025</span>
+                        <span class="card_year">2024</span>
                     </div>
-                    <h3 class="card_title">Santa Monica</h3>
+                    <h3 class="card_title">Mhasidu, Ruiru - Kenya</h3>
                     <div class="card_icons">
                         <span class="item">
                             <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">250sqm
@@ -284,6 +288,41 @@
                     </div>
                     <p class="card_category">scope | renovation and redesign</p>
                 <!--<p class="card_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad recusandae accusamus excepturi maiores, quam quisquam!</p>-->
+                </div>
+            </div>
+            <!--Card 4-->
+            <div class="project_card" data-aos="fade-up"
+            data-aos-duration="2000">
+                <div class="card_image">
+                    <img src="./images/card1.webp" alt="Project One tile">
+                </div>
+                <div class="card_content">
+                    <div class="card_meta">
+                        <span class="card_category">Residential</span>
+                        <span class="card_year">2023</span>
+                    </div>
+                    <h3 class="card_title">Tatu City, Kiambu - Kenya</h3>
+                    <div class="card_icons">
+                        <span class="item">
+                            <img src="./svg-icons/sqm.svg" alt="sqm icon" class="icon">500sqm
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/floors.svg" alt="Floor" class="icon">2
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/bedrooms.svg" alt="rooms icon" class="icon">5
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/shower.svg" alt="showericon" class="icon">4
+                        </span>
+                        <span class="item">
+                            <img src="./svg-icons/garage.svg" alt="garage icon" class="icon">1
+                        </span>
+                    </div>
+                    <p class="card_category">Scope | Design and Project Management</p>
+                <!--<p class="card_description">
+                    5-Bedroom modern home with open 
+                    spaces, natural light, and seamless indoor-outdoor living. En-suite bedrooms include a master suite with walk-in closet and balcony. Premium finishes, smart features, landscaped gardens, pool, and covered parking complete the residence.</p>-->
                 </div>
             </div>
         </div>
