Creative Builders Africa ltd Get a quick quote form and light schemes for all pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="color-scheme" content="light">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
@@ -59,7 +60,7 @@
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="https://wa.me/254702066062" rel="noopener noreferrer" >Contact Us</a></li>
                             <li><a href="./pages/Fundi.html" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
-                            <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
+                            <li id="nav_cta"><a href="./pages/Quote.html" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
                         <div class="hamburger" id="hamburger">
