--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="color-scheme" content="light">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creative Builders Africa</title>
@@ -58,7 +59,6 @@
         </div>
       </nav>
     </header>
-    <div>
     <!--Form-->
     <div class="service-form-container">
       <h2>Ask for a <span>Fundi</span></h2>
@@ -116,7 +116,6 @@
         </div>
       </form>
     </div>
-    foo
   </body>
   <script>
     document
@@ -131,7 +130,7 @@
 
         // Redirect after 2 seconds
         setTimeout(() => {
-          window.location.href = "";
+          window.location.href = "/";
         }, 2000);
       });
   </script>
