--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="color-scheme" content="light">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Builders Africa</title>
@@ -17,9 +18,9 @@
                         <ul class="navlinks" id="Navlinks">
                             <li><strong><a href="../index.html">Home</a></strong></li>
                             <li><a href="../pages/about.html" rel="noopener  noreferrer">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
-                            <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
+                            <li><a href="https://wa.me/254702066062">Contact Us</a></li>
+                            <li><a href="./Fundi.html" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
+                            <li id="nav_cta"><a href="./Quote.html" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
                         <div class="hamburger" id="hamburger">
