--- a/pages/Quote.html
+++ b/pages/Quote.html
@@ -100,6 +100,15 @@
 </div>
 </body>
 <script>
+
+const hamburger = document.getElementById('hamburger');
+        const Navlinks = document.getElementById('Navlinks');
+
+        hamburger.addEventListener('click', function() {
+            Navlinks.classList.toggle('active');
+            hamburger.classList.toggle('active');
+        });
+
 document.getElementById("quoteForm").addEventListener("submit", function(e) {
   e.preventDefault();
 
