--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -118,7 +118,7 @@
     </div>
   </body>
   <script>
-
+    //Ham menu
     const hamburger = document.getElementById('hamburger');
         const Navlinks = document.getElementById('Navlinks');
 
