--- a/pages/Quote.html
+++ b/pages/Quote.html
@@ -100,7 +100,7 @@
 </div>
 </body>
 <script>
-
+//Ham menu 
 const hamburger = document.getElementById('hamburger');
         const Navlinks = document.getElementById('Navlinks');
 
