Creative Builders Africa ltd Forms Implemented and content update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <li><strong><a href="index.html" rel="noopener noreferrer">Home</a></strong></li>
                             <li><a href="./pages/about.html" rel="noopener  noreferrer">About Us</a></li>
                             <li><a href="https://wa.me/254702066062" rel="noopener noreferrer" >Contact Us</a></li>
-                            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfgSIj0WcA91Rla6tDNWGApHc_2rwV1WC6QzAF_nUZZjNLM5Q/viewform?usp=header" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
+                            <li><a href="./pages/Fundi.html" target="_blank" rel="noopener noreferrer">Ask For a Fundi</a></li>
                             <li id="nav_cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header" target="_blank" rel="noopener noreferrer">Get a Quick Quote</a>
                             </li>
                         </ul>
